--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,51 @@ __pycache__/
 .DS_Store
 .aws-dev-demos-state/
 .vscode/
+
+# AWS S3
+.s3*
+
+# AWS Lambda
+.lambda*
+
+# AWS DynamoDB
+.dynamodb*
+
+# TypeScript
+node_modules/
+dist/
+
+*.js
+!jest.config.js
+*.d.ts
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+
+# Local Terraform state
+*.tfstate
+*.tfstate.*
+terraform.tfstate
+terraform.tfstate.backup
+
+# Crash logs
+crash.log
+crash.*.log
+
+# Terraform working directory
+.terraform/
+.terraform.lock.hcl
+
+# Plan files
+*.tfplan
+
+# Sensitive override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Local environment variables
+.terraformrc
+terraform.rc
