feat: update Terraform configurations and add local Nginx setup for development

--- a/app/services/docker-compose.yml
+++ b/app/services/docker-compose.yml
@@ -77,6 +77,8 @@ services:
       context: ./web
     environment:
       - NODE_ENV=production
+    volumes:
+      - ./web/nginx/nginx.local.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - api
     ports:
