--- a/app/services/web/nginx/nginx.local.conf
+++ b/app/services/web/nginx/nginx.local.conf
@@ -42,6 +42,16 @@ http {
       try_files /health =200;
     }
 
+    # API proxy - for local development with Docker Compose
+    location /api {
+      proxy_pass http://api:3000;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location / {
       root   /usr/share/nginx/html;
       try_files $uri $uri/ /index.html;
