feat(auth): integrate Amazon Cognito for user authentication and authorization
- Added Cognito User Pool and User Pool Client configuration in Terraform.
- Implemented authentication middleware for token validation in Express.
- Created AuthContext and AuthModal components for managing user authentication state in React.
- Updated API service to include authentication token in requests.
- Refactored styles to use Tailwind CSS for improved UI consistency.
- Added user sign-up, sign-in, and verification functionalities with error handling.

--- a/app/services/web/Dockerfile
+++ b/app/services/web/Dockerfile
@@ -10,6 +10,7 @@ WORKDIR /app
 COPY package.json ./
 COPY --from=deps /app/node_modules ./node_modules
 COPY index.html vite.config.ts tsconfig.json vitest.config.ts ./
+COPY tailwind.config.js postcss.config.js ./
 COPY public ./public
 COPY src ./src
 RUN npm run build
