--- a/app/services/api/package.json
+++ b/app/services/api/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "jose": "^5.9.6",
     "pino": "^9.3.2",
     "pino-http": "^10.3.0",
     "uuid": "^10.0.0",
