--- a/app/services/web/package.json
+++ b/app/services/web/package.json
@@ -11,6 +11,8 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.3.12",
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -29,6 +31,9 @@
     "typescript": "^5.6.3",
     "vite": "^5.4.6",
     "vitest": "^2.0.5",
-    "globals": "^15.9.0"
+    "globals": "^15.9.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
